--- a/pom.xml
+++ b/pom.xml
@@ -6,24 +6,12 @@
 
     <groupId>com.kafka.tutorial</groupId>
     <artifactId>kafka-tutorial</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-clients</artifactId>
-            <version>2.2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.7.25</version>
-        </dependency>
-        <dependency>
-            <groupId>com.twitter</groupId>
-            <artifactId>hbc-core</artifactId> <!-- or hbc-twitter4j -->
-            <version>2.2.0</version> <!-- or whatever the latest version is -->
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>kafka-elasticsearch</module>
+        <module>kafka-twitter</module>
+        <module>kafka-basics</module>
+    </modules>
 
 </project>
