Add Bank Balance Kafka streams example

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <module>kafka-elasticsearch</module>
         <module>kafka-twitter</module>
         <module>kafka-basics</module>
-        <module>kafka-streams-wordcount</module>
+        <module>kafka-streams-examples</module>
     </modules>
 
 </project>
