--- a/kafka-streams-examples/pom.xml
+++ b/kafka-streams-examples/pom.xml
@@ -23,6 +23,11 @@
             <version>2.0.0</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.25</version>
